# lportal

./: .gitignore  AGENTS.md  CORRECTED_SETUP_GUIDE.md  INFRASTRUCTURE_SETUP_GUIDE.md  PHASE_1_READINESS_ASSESSMENT.md  PHASE_4_READINESS_ASSESSMENT.md  PHASE_5_READINESS_ASSESSMENT.md  PRODUCTION_MONITORING_GUIDE.md  PRODUCTION_READINESS_ASSESSMENT.md  README.md  SECURITY-SETUP-GUIDE.md  STEP_BY_STEP_SETUP_GUIDE.md  config_backup.json  quick-start.sh  setup-secure.sh  validate-setup.sh
assets/: image_prompts.md
context7-mcp-server/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml
context7-mcp-server/examples/: cursor_config.json  usage_examples.md  vscode_config.json
context7-mcp-server/scripts/: install.sh  test.sh
context7-mcp-server/src/context7_mcp/: __init__.py  main.py
context7-mcp-server/src/context7_mcp/core/: __init__.py  cache.py  config.py  http_server.py  models.py  server.py
context7-mcp-server/src/context7_mcp/tools/: __init__.py  documentation_fetcher.py  library_resolver.py
context7-mcp-server/tests/: __init__.py  test_cache.py  test_library_resolver.py  test_server.py
live-coding/: .env.example  .eslintrc.json  .gitignore  DA.md  INTEGRATION_VERIFICATION.md  INTEGRATION_VERIFICATION_SUMMARY.md  PRD.md  README.md  SA.md  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
live-coding/.storybook/: main.ts  preview.ts
live-coding/public/: manifest.json  offline.html  sw.js
live-coding/src/__mocks__/: dnd.js  (+1 more)
live-coding/tech_docs/: graphql-overview.md  nextjs-14-overview.md  postgresql-overview.md  react-18-overview.md  supabase-overview.md
live-coding/tests/: README.md
personality/: 01_prompt_engineer.md  02_product_manager.md  05_solution_architect.md  06_data_architect.md  07_senior_api_developer.md  08_planner.md
plans/: context7-mcp-server-plan.md  implementation-plan.md  phase-4-kickoff-plan.md  tech_choices.md  visual-asset-plan.md
sparc_tools/MCP-dev/: 00-Session-Notes.md  01-VSCode-local-setup.md  02-VSCode_Insiders_MCP.md  03-context-7-setup.md  04-MCP-Development-Guide.md  05-Sequential-Thinking-Setup.md  06-Brave-Search-Setup.md  07-Knowledge-Graph-Memory-Setup.md  08-Magic-UI-Setup.md
sparc_tools/infrastructure/: DigitalOcean.md  Docker.md  Playwright.md  Supabase.md  n8n.md
sparc_tools/protocol_middleware/: FastAPI.md  FastMCP.md
(+263 files in other folders)
